# PKVR-2021-TK

./: README.md
PKVR-2021-TK-main/: CMakeLists.txt  package.xml
PKVR-2021-TK-main/etc/: Alica.conf  AlicaCapnzProxy.conf  Globals.conf
PKVR-2021-TK-main/etc/Gen-src/include/: ConditionCreator.h  ConstraintCreator.h  DataAnalysis1611832940311.h  DomainBehaviour.h  DomainCondition.h  Game1606987272334.h  Motion1611825052624.h  PlayPlan1611235901799.h  UtilityFunctionCreator.h  analysisObstacles.h  analysisObstacles1611833222383.h  init.h  init1606386510762.h  main1606386348567.h  move.h  move1611825595992.h  play.h  play1606987675564.h  waitb.h  waitb1610020212179.h
PKVR-2021-TK-main/etc/Gen-src/src/: BehaviourCreator.cpp  ConditionCreator.cpp  ConstraintCreator.cpp  DataAnalysis1611832940311.cpp  DomainBehaviour.cpp  (+16 more)
PKVR-2021-TK-main/etc/plan/: DataAnalysis.pml  DataAnalysis.pmlex  Game.pml  Game.pmlex  Motion.pml  Motion.pmlex  PlayPlan.pml  PlayPlan.pmlex  analysisObstacles.beh  init.beh  main.pml  main.pmlex  move.beh  play.beh  waitb.beh
PKVR-2021-TK-main/etc/role/: roleset.rst
PKVR-2021-TK-main/etc/task/: taskRepo.tsk
PKVR-2021-TK-main/include/: alica_agent.h
PKVR-2021-TK-main/include/model/: FieldContainer.h  authentification_factory.h  authentification_handler.h  communication.h  message_factory.h  message_handler.h  move_factory.h  request_action_handler.h  waitb_handler.h  world.h  worldmodel.h
PKVR-2021-TK-main/src/: alica_agent.cpp
PKVR-2021-TK-main/src/model/: FieldContainer.cpp  authentification_factory.cpp  authentification_handler.cpp  communication.cpp  message_factory.cpp  move_factory.cpp  request_action_handler.cpp  waitb_handler.cpp  world.cpp  worldmodel.cpp
(+12 files in other folders)
